--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
+    "axios": "^1.10.0",
     "basic-ftp": "^5.0.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
