--- a/.env
+++ b/.env
@@ -1,12 +1,22 @@
 GUID=xxxx
 DATABASE=mongodb+srv://wh891706:Jz1X5pslUXxCBw9s@cluster0.vt4xkx8.mongodb.net/presensi
 
-RMQ_HOST=rmq230.pptik.id
-RMQ_USER=ai-presensi
-RMQ_PASS=BtRD6f9oG29c
-RMQ_PORT=5672
-RMQ_VHOST=/ai-presensi
+# RMQ_HOST=rmq230.pptik.id
+# RMQ_USER=ai-presensi
+# RMQ_PASS=BtRD6f9oG29c
+# RMQ_PORT=5672
+# RMQ_VHOST=/ai-presensi
 
-QUE=presence-2024
+# QUE=presence-2024
 
-QUEUE_NAME=
+# QUEUE_NAME=
+
+# RabbitMQ lokal
+RMQ_HOST=localhost       
+RMQ_PORT=5672            
+RMQ_USER=guest
+RMQ_PASS=guest
+RMQ_VHOST=/             
+
+# Nama queue yang ingin dipakai
+QUE=history-presensi   
