--- a/.env
+++ b/.env
@@ -11,12 +11,22 @@ DATABASE=mongodb+srv://wh891706:Jz1X5pslUXxCBw9s@cluster0.vt4xkx8.mongodb.net/pr
 
 # QUEUE_NAME=
 
-# RabbitMQ lokal
-RMQ_HOST=localhost       
-RMQ_PORT=5672            
-RMQ_USER=guest
-RMQ_PASS=guest
-RMQ_VHOST=/             
+# # RabbitMQ lokal
+# RMQ_HOST=localhost       
+# RMQ_PORT=5672            
+# RMQ_USER=guest
+# RMQ_PASS=guest
+# RMQ_VHOST=/             
+
+# # Nama queue yang ingin dipakai
+# QUE=history-presensi   
+
+# RabbitMQ CloudAMQP
+RMQ_HOST=armadillo.rmq.cloudamqp.com
+RMQ_PORT=5672
+RMQ_USER=qkfbvmsl
+RMQ_PASS=zU8TJtC5qYI5x9EfNzEh8dyFmxhSaMWU
+RMQ_VHOST=qkfbvmsl
 
 # Nama queue yang ingin dipakai
-QUE=history-presensi   
+QUE=history-presensi
